--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body {
  </td>  
  <div class="container">
     <td valign="padding-right">
-    <img width="50%" src="/Users/xuecheng/Downloads/test/a.png">
+    <img width="50%" src="xuechengmath.github.io/xuecheng.png">
     <div class="overlay">
     <div class="text">Hello there!</div>
   </div>  
