--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ body {
 </head>
 <body>
   <div class="sidenav">
-  <a href="xuechengmath.github.io/index.html">About</a>
-  <a href="xuechengmath.github.io/research.html">Research</a>
-  <a href="xuechengmath.github.io/teaching.html">Teaching</a>
+  <a href="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/index.html">About</a>
+  <a href="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/research.html">Research</a>
+  <a href="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/teaching.html">Teaching</a>
 </div>
 
 
@@ -97,7 +97,7 @@ body {
  </td>  
  <div class="container">
     <td valign="padding-right">
-    <img width="50%" src="xuechengmath.github.io/xuecheng.jpg">
+    <img width="50%" src="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/xuecheng.jpg">
     <div class="overlay">
     <div class="text">Hello there!</div>
   </div>  
@@ -115,7 +115,7 @@ body {
     Curriculum Vitae:
       </h3> 
 
-      </p>This is my <a href="xuechengmath.github.io/CV.pdf">CV</a>.  <p> 
+      </p>This is my <a href="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/CV.pdf">CV</a>.  <p> 
         <p>Last update, 7/3/2023.  <p>
 <div>
 </body>
