--- a/research.html
+++ b/research.html
@@ -74,10 +74,10 @@ body {
 </style>
 </head>
 <body>
-<div class="sidenav">
-  <a href="xuechengmath.github.io/index.html">About</a>
-  <a href="xuechengmath.github.io/research.html">Research</a>
-  <a href="xuechengmath.github.io/teaching.html">Teaching</a>
+ <div class="sidenav">
+  <a href="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/index.html">About</a>
+  <a href="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/research.html">Research</a>
+  <a href="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/teaching.html">Teaching</a>
 </div>
 
 <div class="main">
