--- a/teaching.html
+++ b/teaching.html
@@ -75,12 +75,10 @@ body {
 </head>
 <body>
   <div class="sidenav">
-  <a href="xuechengmath.github.io/index.html">About</a>
-  <a href="xuechengmath.github.io/research.html">Research</a>
-  <a href="xuechengmath.github.io/teaching.html">Teaching</a>
+  <a href="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/index.html">About</a>
+  <a href="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/research.html">Research</a>
+  <a href="https://github.com/xuechengmath/xuechengmath.github.io/blob/main/teaching.html">Teaching</a>
 </div>
-
-
 <div class="main">
 
 <h4> Teaching at Tsinghua University:</h4>
