--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@ body {
 
       </p>This is my <a href="https://xuechengmath.github.io/CV.pdf">CV</a>.  <p> 
         <p>Last update, 7/3/2023.  <p>
+
 <div>
+  <hr class="solid">
+  <p>My homepage is also maintained <a href="https://sites.google.com/view/xuechengwangmath">here.</a></p>
 </body>
 </html> 
