--- a/research.html
+++ b/research.html
@@ -6,8 +6,8 @@ body {
   font-family: "Lato", sans-serif;
 }
 .main {
-   
-  margin-right: 300px; /* Same width as the sidebar + left position in px */
+     margin-left: 100px; 
+  margin-right: 100px; /* Same width as the sidebar + left position in px */
   font-size: 24px; /* Increased text to enable scrolling */
   padding: 0px 10px;
 }
