--- a/teaching.html
+++ b/teaching.html
@@ -6,7 +6,7 @@ body {
   font-family: "Lato", sans-serif;
 }
 .main {
- 
+   margin-left: 100px; 
   font-size: 24px; /* Increased text to enable scrolling */
   padding: 0px 10px;
 }
