--- a/research.html
+++ b/research.html
@@ -102,7 +102,7 @@ body {
 <p><b>Please note that the published   papers might be slightly different from the preprints.</b></p>
 <ol reversed align="justify">
   <li> Remarks on the large data global solutions of 3D RVP system and 3D RVM system,  <a href="https://arxiv.org/abs/2203.01202"> arXiv</a>,
-   <b>Discrete and Continuous Dynamical Systems - Series A</b>,  <b>online first</b>, 2023.</li>
+   <b>Discrete and Continuous Dynamical Systems - Series A</b>,  Vol. 43, no. 10, 3796-3829, 2023.</li>
   <li> Decay estimates for the 3D relativistic and non-relativistic Vlasov-Poisson systems,   <b>Kinetic and Related Models</b>,    no 1,  1-19, 16(2023).</li>
 
    <li>(With <a href="https://web.math.princeton.edu/~aionescu/" style="text-decoration:none">A. Ionescu</a>, <a href="https://www.math.brown.edu/bpausade/" style="text-decoration:none">B. Pausader</a>, <a href="https://www.math.uzh.ch/index.php?id=people&key1=32674#" style="text-decoration:none"> K. Widmayer</a>)   On the asymptotic behavior of solutions to the Vlasov-Poisson system,  <b>International Mathematics Research Notices</b>,  Vol. 2022, no. 12,   8865–8889, 2022.</li>
