--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@ body {
 
  <h4> Preprints & To appear: </h4> 
 <ol reversed align="justify">
-  <li>(With <a href="https://web.math.princeton.edu/~aionescu/" style="text-decoration:none">A. Ionescu</a>, <a href="https://www.math.brown.edu/bpausade/" style="text-decoration:none">B. Pausader</a>, <a href="https://www.math.uzh.ch/index.php?id=people&key1=32674#" style="text-decoration:none"> K. Widmayer</a>)  On the stability of homogeneous equilibria in the Vlasov-Poisson system on R^3,  <a href="https://arxiv.org/abs/2305.11166"> preprint</a>,   <b> Classical and Quantum Gravity</b>, <b><i></i>to appear</i></b>, 2023.</li>
+  <li>(With <a href="https://web.math.princeton.edu/~aionescu/" style="text-decoration:none">A. Ionescu</a>, <a href="https://www.math.brown.edu/bpausade/" style="text-decoration:none">B. Pausader</a>, <a href="https://www.math.uzh.ch/index.php?id=people&key1=32674#" style="text-decoration:none"> K. Widmayer</a>)  On the stability of homogeneous equilibria in the Vlasov-Poisson system on R^3,  <a href="https://arxiv.org/abs/2305.11166"> preprint</a>,   <b> Classical and Quantum Gravity</b>, <b><i>to appear</i></b>, 2023.</li>
   <li>Gobal solution of 3D anisotropic   wave equations with same speed in one direction,     <a href="https://arxiv.org/abs/2303.03973"> preprint</a>, 2023</li>
   <li>Global stability of the Minkowski spacetime for the Einstein-Vlasov system, 98 pages,
     <a href="https://arxiv.org/abs/2210.00512"> preprint</a>, 2022</li>
