--- a/research.html
+++ b/research.html
@@ -86,8 +86,7 @@ body {
 
  <h4> Preprints & To appear: </h4> 
 <ol reversed align="justify">
-  <li>(With <a href="https://web.math.princeton.edu/~aionescu/" style="text-decoration:none">A. Ionescu</a>, <a href="https://www.math.brown.edu/bpausade/" style="text-decoration:none">B. Pausader</a>, <a href="https://www.math.uzh.ch/index.php?id=people&key1=32674#" style="text-decoration:none"> K. Widmayer</a>)  On the stability of homogeneous equilibria in the Vlasov-Poisson system on R^3,  <a href="https://arxiv.org/abs/2305.11166"> preprint</a>,   <b> Classical and Quantum Gravity</b>, <b><i>to appear</i></b>, 2023.</li>
-  <li>Gobal solution of 3D anisotropic   wave equations with same speed in one direction,     <a href="https://arxiv.org/abs/2303.03973"> preprint</a>, 2023</li>
+   <li>Gobal solution of 3D anisotropic   wave equations with same speed in one direction,     <a href="https://arxiv.org/abs/2303.03973"> preprint</a>, 2023</li>
   <li>Global stability of the Minkowski spacetime for the Einstein-Vlasov system, 98 pages,
     <a href="https://arxiv.org/abs/2210.00512"> preprint</a>, 2022</li>
   <li>(With <a href="https://web.math.princeton.edu/~aionescu/" style="text-decoration:none">A. Ionescu</a>, <a href="https://www.math.brown.edu/bpausade/" style="text-decoration:none">B. Pausader</a>, <a href="https://www.math.uzh.ch/index.php?id=people&key1=32674#" style="text-decoration:none"> K. Widmayer</a>)  Nonlinear Landau damping for the Vlasov-Poisson system in R^3: the Poisson equilibrium, <a href="https://arxiv.org/abs/2205.04540"> preprint</a>,  2022.</li>
@@ -101,6 +100,7 @@ body {
  <h4> Published papers:</h4> 
 <p><b>Please note that the published   papers might be slightly different from the preprints.</b></p>
 <ol reversed align="justify">
+   <li>(With <a href="https://web.math.princeton.edu/~aionescu/" style="text-decoration:none">A. Ionescu</a>, <a href="https://www.math.brown.edu/bpausade/" style="text-decoration:none">B. Pausader</a>, <a href="https://www.math.uzh.ch/index.php?id=people&key1=32674#" style="text-decoration:none"> K. Widmayer</a>)  On the stability of homogeneous equilibria in the Vlasov-Poisson system on R^3,  <a href="https://arxiv.org/abs/2305.11166"> preprint</a>,   <b> Classical and Quantum Gravity</b>, 2023, Vol 40, <a href="https://iopscience.iop.org/article/10.1088/1361-6382/acebb0">185007.</li>
   <li> Remarks on the large data global solutions of 3D RVP system and 3D RVM system,  <a href="https://arxiv.org/abs/2203.01202"> arXiv</a>,
    <b>Discrete and Continuous Dynamical Systems - Series A</b>,  Vol. 43, no. 10, 3796-3829, 2023.</li>
   <li> Decay estimates for the 3D relativistic and non-relativistic Vlasov-Poisson systems,   <b>Kinetic and Related Models</b>,    no 1,  1-19, 16(2023).</li>
