--- a/research.html
+++ b/research.html
@@ -92,7 +92,7 @@ body {
   <li>(With <a href="https://web.math.princeton.edu/~aionescu/" style="text-decoration:none">A. Ionescu</a>, <a href="https://www.math.brown.edu/bpausade/" style="text-decoration:none">B. Pausader</a>, <a href="https://www.math.uzh.ch/index.php?id=people&key1=32674#" style="text-decoration:none"> K. Widmayer</a>)  Nonlinear Landau damping for the Vlasov-Poisson system in R^3: the Poisson equilibrium, <a href="https://arxiv.org/abs/2205.04540"> preprint</a>,  2022，<b><i>Annals of PDE</i></b>, <b><i>to appear</i></b>.</li>
 
     <li>Global solution of the 3D relativistic Vlasov-Maxwell system for  large data with cylindrical symmetry, 113 pages,   <a href="https://arxiv.org/abs/2203.01199"> preprint</a>, 2022.</li>
-    <li>Global solution of the   3D relativistic Vlasov-Poisson system for a class of large data,  <a href="https://arxiv.org/abs/2003.14191v3"> preprint</a>, 2022.</li>
+    <li>Global solution of the   3D relativistic Vlasov-Poisson system for a class of large data,  <a href="https://arxiv.org/abs/2003.14191v3"> preprint</a>, 2022, <b><i>Journal of Statistical Physics</i></b>, <b><i>to appear</i></b>.</li>
 </ol> 
 
 <hr class="solid">
