--- a/research.html
+++ b/research.html
@@ -133,6 +133,7 @@ body {
     Acknowledgement:  My works were supported by 
       </h4> 
      <ul>
+  <li>NSFC-12322110 (2024/1–2026/12),  PI,优秀青年科学基金项目</li>
   <li>NSFC-12141102 (2022–2026), not PI</li>
   <li>MOST-2020YFA0713003(2020–2025), not PI</li>
   <li>NSFC-11801299 (2018–2021), PI</li>
