--- a/research.html
+++ b/research.html
@@ -86,13 +86,12 @@ body {
 
  <h4> Preprints & To appear: </h4> 
 <ol reversed align="justify">
+    <li>(With <a href="https://web.math.princeton.edu/~seri/homepage/" style="text-decoration:none">S. Klainerman</a>) Decay estimates of wave equations in un-isotropic media,  <a href="https://arxiv.org/abs/2508.12049"> preprint</a>, 2025</li>
     <li>(With <a href="https://web.math.princeton.edu/~aionescu/" style="text-decoration:none">A. Ionescu</a>, <a href="https://www.math.brown.edu/bpausade/" style="text-decoration:none">B. Pausader</a>, <a href="https://www.math.uzh.ch/index.php?id=people&key1=32674#" style="text-decoration:none"> K. Widmayer</a>) Nonlinear Landau damping and wave operators in sharp Gevrey spaces,     <a href="https://arxiv.org/abs/2405.04473"> preprint</a>, 2024</li>
   <li>Global solution of 2D hyperbolic liquid crystal system for small initial data,     <a href="https://arxiv.org/abs/2403.18385"> preprint</a>, 2024</li>
    <li>Gobal solution of 3D anisotropic   wave equations with same speed in one direction,     <a href="https://arxiv.org/abs/2303.03973"> preprint</a>, 2023</li>
   <li>Global stability of the Minkowski spacetime for the Einstein-Vlasov system, 98 pages,
     <a href="https://arxiv.org/abs/2210.00512"> preprint</a>, 2022</li>
- 
-
     <li>Global solution of the 3D relativistic Vlasov-Maxwell system for  large data with cylindrical symmetry, 113 pages,   <a href="https://arxiv.org/abs/2203.01199"> preprint</a>, 2022.</li>
     
 </ol> 
